Adds capitalisation via css

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <div class="container">
         <h1>Welcome to the course</h1>
         <form id="input-form">
-            <input type="text" id="input-field">
-            <input type="submit" value="Click Me" id="input-btn">
+            <input type="text" placeholder="Enter your name" id="input-field">
+            <input type="submit" value="Click!" id="input-btn">
         </form>
-        <p id="output-field"></p>
+        <p id="output-field" class="output-field"></p>
     </div>
 </body>
 <script src="index.js"></script>
